--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,9 @@ name: zig-ci
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   test:
@@ -12,9 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: goto-bus-stop/setup-zig@v3
+      - uses: goto-bus-stop/setup-zig@v2
         with:
-          zig-version: '0.14.1'
+          version: '0.14.1'
       - run: zig build test --summary all
 
   lint:
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: goto-bus-stop/setup-zig@v3
+      - uses: goto-bus-stop/setup-zig@v2
         with:
-          zig-version: '0.14.1'
+          version: '0.14.1'
       - run: zig fmt --check .
